.kube/app/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: photo
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: backend-config-volume
          configMap:
            name: backend-config
      containers:
        - name: backend
          image: docker.io/hikaari0/photo-backend:v1
          imagePullPolicy: IfNotPresent

          volumeMounts:
            - name: backend-config-volume
              mountPath: /app/config.yaml
              subPath: config.yaml
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 25
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
