.kube/app/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: photo
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8002
      targetPort: 8000
